website/versioned_docs/version-2.0.0-alpha.12/react-native.mfacontainer.md
---
id: version-2.0.0-alpha.12-react-native.mfacontainer
title: MFAContainer class
hide_title: true
original_id: react-native.mfacontainer
---
<!-- Do not edit this file. It is automatically generated by API Documenter. -->


## MFAContainer class


<b>Signature:</b>

```typescript
export declare class MFAContainer<T extends BaseAPIClient> 
```

## Constructors

|  Constructor | Modifiers | Description |
|  --- | --- | --- |
|  [(constructor)(parent)](./react-native.mfacontainer._constructor_.md) |  | Constructs a new instance of the <code>MFAContainer</code> class |

## Properties

|  Property | Modifiers | Type | Description |
|  --- | --- | --- | --- |
|  [parent](./react-native.mfacontainer.parent.md) |  | <code>AuthContainer&lt;T&gt;</code> |  |

## Methods

|  Method | Modifiers | Description |
|  --- | --- | --- |
|  [activateOOB(code)](./react-native.mfacontainer.activateoob.md) |  |  |
|  [activateTOTP(otp)](./react-native.mfacontainer.activatetotp.md) |  |  |
|  [authenticateWithOOB(options)](./react-native.mfacontainer.authenticatewithoob.md) |  |  |
|  [authenticateWithRecoveryCode(code)](./react-native.mfacontainer.authenticatewithrecoverycode.md) |  |  |
|  [authenticateWithTOTP(options)](./react-native.mfacontainer.authenticatewithtotp.md) |  |  |
|  [createNewOOB(options)](./react-native.mfacontainer.createnewoob.md) |  |  |
|  [createNewTOTP(options)](./react-native.mfacontainer.createnewtotp.md) |  |  |
|  [deleteAuthenticator(id)](./react-native.mfacontainer.deleteauthenticator.md) |  |  |
|  [generateOTPAuthURIQRCodeImageURL(otpauthURI)](./react-native.mfacontainer.generateotpauthuriqrcodeimageurl.md) |  |  |
|  [getAuthenticators()](./react-native.mfacontainer.getauthenticators.md) |  |  |
|  [listRecoveryCode()](./react-native.mfacontainer.listrecoverycode.md) |  |  |
|  [regenerateRecoveryCode()](./react-native.mfacontainer.regeneraterecoverycode.md) |  |  |
|  [revokeAllTrustedDevices()](./react-native.mfacontainer.revokealltrusteddevices.md) |  |  |
|  [triggerOOB(authenticatorID)](./react-native.mfacontainer.triggeroob.md) |  |  |

