website/versioned_docs/version-2.0.0-alpha.18/react-native.mfacontainer.md
---
id: version-2.0.0-alpha.18-react-native.mfacontainer
title: MFAContainer class
hide_title: true
original_id: react-native.mfacontainer
---
<!-- Do not edit this file. It is automatically generated by API Documenter. -->


## MFAContainer class

Skygear Auth Multi-Factor-Authentication APIs.

<b>Signature:</b>

```typescript
export declare class MFAContainer<T extends BaseAPIClient> 
```

## Constructors

|  Constructor | Modifiers | Description |
|  --- | --- | --- |
|  [(constructor)(parent)](./react-native.mfacontainer._constructor_.md) |  | Constructs a new instance of the <code>MFAContainer</code> class |

## Properties

|  Property | Modifiers | Type | Description |
|  --- | --- | --- | --- |
|  [parent](./react-native.mfacontainer.parent.md) |  | <code>AuthContainer&lt;T&gt;</code> |  |

## Methods

|  Method | Modifiers | Description |
|  --- | --- | --- |
|  [activateOOB(code)](./react-native.mfacontainer.activateoob.md) |  | Activates out-of-band (OOB) MFA authenticator. |
|  [activateTOTP(otp)](./react-native.mfacontainer.activatetotp.md) |  | Activates time-based one time password (TOTP) MFA authenticator. |
|  [authenticateWithOOB(options)](./react-native.mfacontainer.authenticatewithoob.md) |  | Performs MFA using out-of-band (OOB) MFA authenticator. |
|  [authenticateWithRecoveryCode(code)](./react-native.mfacontainer.authenticatewithrecoverycode.md) |  | Perform MFA using recovery code. |
|  [authenticateWithTOTP(options)](./react-native.mfacontainer.authenticatewithtotp.md) |  | Perform MFA using time-based one time password (TOTP) MFA authenticator. |
|  [createNewOOB(options)](./react-native.mfacontainer.createnewoob.md) |  | Creates new out-of-band (OOB) MFA authenticator. |
|  [createNewTOTP(options)](./react-native.mfacontainer.createnewtotp.md) |  | Creates new time-based one time password (TOTP) MFA authenticator. |
|  [deleteAuthenticator(id)](./react-native.mfacontainer.deleteauthenticator.md) |  | Delete the MFA authenticator with specified ID. |
|  [getAuthenticators()](./react-native.mfacontainer.getauthenticators.md) |  | Returns a list of configured MFA authenticators. |
|  [listRecoveryCode()](./react-native.mfacontainer.listrecoverycode.md) |  | Returns a list of MFA recovery code. |
|  [regenerateRecoveryCode()](./react-native.mfacontainer.regeneraterecoverycode.md) |  | Regenerates MFA recovery codes. |
|  [revokeAllTrustedDevices()](./react-native.mfacontainer.revokealltrusteddevices.md) |  | Revokes all MFA trusted devices. |
|  [triggerOOB(authenticatorID)](./react-native.mfacontainer.triggeroob.md) |  | Triggers out-of-band (OOB) MFA. |

